RESOLVED FIXED205330
[GTK][WPE] IndexedDB directory set in WebsiteDataManager is ignored
https://bugs.webkit.org/show_bug.cgi?id=205330
Summary [GTK][WPE] IndexedDB directory set in WebsiteDataManager is ignored
Carlos Garcia Campos
Reported 2019-12-17 01:50:24 PST
There are two problems here: 1- WebKitWebsiteDataManager is no longer setting the indexedDB directory to the WEbsiteDatastore configuration. It seems the code was removed by mistake in r249778 when rolling out r249768. 2- The WebProcessPool is not considering the primary WebsiteDataStore for indexedDB configuration. This was caught by test /webkit/WebKitWebsiteData/configuration
Attachments
Patch (3.63 KB, patch)
2019-12-17 01:54 PST, Carlos Garcia Campos
youennf: review+
Carlos Garcia Campos
Comment 1 2019-12-17 01:54:52 PST
EWS Watchlist
Comment 2 2019-12-17 01:55:45 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2019-12-17 06:12:51 PST
Could a WebKit2 owner check the cross-platform change, please? Youenn?
youenn fablet
Comment 4 2019-12-17 06:21:09 PST
Comment on attachment 385866 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385866&action=review > Source/WebKit/UIProcess/WebProcessPool.cpp:540 > parameters.defaultDataStoreParameters.indexedDatabaseDirectory = WebKit::WebsiteDataStore::defaultDataStore()->parameters().indexedDatabaseDirectory; LGTM. There is some pre-existing inconsistencies in this method with withWebsiteDataStore . Some other parameters like parameters.defaultDataStoreParameters.networkSessionParameters.networkCacheDirectory also check for withWebsiteDataStore.
Carlos Garcia Campos
Comment 5 2019-12-17 06:27:20 PST
(In reply to youenn fablet from comment #4) > Comment on attachment 385866 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=385866&action=review > > > Source/WebKit/UIProcess/WebProcessPool.cpp:540 > > parameters.defaultDataStoreParameters.indexedDatabaseDirectory = WebKit::WebsiteDataStore::defaultDataStore()->parameters().indexedDatabaseDirectory; > > LGTM. Thanks! > There is some pre-existing inconsistencies in this method with > withWebsiteDataStore . > Some other parameters like > parameters.defaultDataStoreParameters.networkSessionParameters. > networkCacheDirectory also check for withWebsiteDataStore. Yes, I noticed it too, but I wasn't sure what the expected behavior was in the end.
Carlos Garcia Campos
Comment 6 2019-12-17 06:28:32 PST
Note You need to log in before you can comment on or make changes to this bug.