[GTK][WPE] IndexedDB directory set in WebsiteDataManager is ignored https://bugs.webkit.org/show_bug.cgi?id=205330

Reviewed by Youenn Fablet.

There are two problems here:

  1- WebKitWebsiteDataManager is no longer setting the indexedDB directory to the WebsiteDatastore
     configuration. It seems the code was removed by mistake in r249778 when rolling out r249768.
  2- The WebProcessPool is not considering the primary WebsiteDataStore for indexedDB configuration.

Fixes: /webkit/WebKitWebsiteData/databases
       /webkit/WebKitWebsiteData/configuration

* UIProcess/API/glib/WebKitWebsiteDataManager.cpp:
(webkitWebsiteDataManagerGetDataStore):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureNetworkProcess):

Canonical link: https://commits.webkit.org/218533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253626 268f45cc-cd09-0410-ab3c-d52691b4dbfc