Source/WebKit/UIProcess/WebProcessPool.cpp
@@ -534,7 +534,9 @@ NetworkProcessProxy& WebProcessPool::ensureNetworkProcess(WebsiteDataStore* with
     // *********
     // IMPORTANT: Do not change the directory structure for indexed databases on disk without first consulting a reviewer from Apple (<rdar://problem/17454712>)
     // *********
-    if (WebKit::WebsiteDataStore::defaultDataStoreExists())
+    if (m_websiteDataStore)
+        parameters.defaultDataStoreParameters.indexedDatabaseDirectory = m_websiteDataStore->resolvedIndexedDatabaseDirectory();
+    else if (WebKit::WebsiteDataStore::defaultDataStoreExists())
         parameters.defaultDataStoreParameters.indexedDatabaseDirectory = WebKit::WebsiteDataStore::defaultDataStore()->parameters().indexedDatabaseDirectory;
     
     if (!parameters.defaultDataStoreParameters.indexedDatabaseDirectory.isEmpty()) {
